@startuml

title __FRIENDADDMENU's Class Diagram__\n

  package com.avansprojects.antl {
    package com.avansprojects.antl.ui.friendAddMenu {
      class FriendAddFragment {
          - mExternalFriendCode : TextView
          - mFriendCode : TextView
          - mEditFriendCode : TextView
          {static} + newInstance()
          + onCreateView()
          + onActivityCreated()
      }
    }
  }
  

  package com.avansprojects.antl {
    package com.avansprojects.antl.ui.friendAddMenu {
      class FriendAddViewModel {
          - mUserCode : String
          + FriendAddViewModel()
          + addFriend()
          + share()
          + deleteFriend()
      }
    }
  }
  

  FriendAddFragment -up-|> Fragment
  FriendAddFragment o-- FriendAddViewModel : mViewModel
  SavedState -up-|> Parcelable
  FriendAddViewModel -up-|> AndroidViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
